infra/k8s/deployments/nats-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: nats-streaming:latest
          args:
            - "-p" # Port for NATS server
            - "4222"
            - "-m" # Monitoring port
            - "8222"
            - "-hbi" # Heartbeat interval for the monitoring endpoint
            - "5s"
            - "-hbt" # Heartbeat interval
            - "5s"
            - "-hbf" # Heartbeat fail count
            - "2"
            - "-SD" # Server ID
            - "-cid" # Cluster ID
            - "ticketing"
---
apiVersion: v1
kind: Service
metadata:
  name: nats-srv
spec:
  selector:
    app: nats
  ports:
    - name: nats
      protocol: TCP
      port: 4222
      targetPort: 4222
    - name: nats-monitor
      protocol: TCP
      port: 8222
      targetPort: 8222
